[Create] Logic show all slots
